<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchCriteriaSelectionFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchBy" />

    <RadioGroup
        android:id="@+id/radioGroupFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/radioName" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/radioSeason" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/radioStudio" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioType"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/radioType" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/radioGenre" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/radioRated" />
        </TableRow>

    </RadioGroup>

</LinearLayout>