<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailActivity">

    <ScrollView
        android:id="@+id/scrollViewDetailedActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addToWatchlist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="addToWatchList"
                    android:text="@string/watchlist" />

            </TableRow>

            <ImageView
                android:id="@+id/animePicture"
                android:layout_width="match_parent"
                android:layout_height="318dp"
                android:layout_margin="30dp"
                tools:srcCompat="@tools:sample/avatars[2]" />

            <TextView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:textStyle="bold" />

            <!-- https://android-arsenal.com/details/1/6434 -->
            <com.warkiz.widget.IndicatorStayLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/customSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isb_indicator_color="@color/colorPrimary"
                    app:isb_indicator_text_color="@color/colorWhite"
                    app:isb_indicator_text_size="18sp"
                    app:isb_max="26"

                    app:isb_min="0"
                    app:isb_only_thumb_draggable="true"
                    app:isb_progress="0"
                    app:isb_seek_smoothly="true"

                    app:isb_show_indicator="rounded_rectangle"
                    app:isb_show_tick_texts="true"
                    app:isb_thumb_color="@color/colorPrimary"
                    app:isb_thumb_size="20dp"
                    app:isb_tick_texts_color="@color/colorPrimary"
                    app:isb_tick_texts_size="15sp"
                    app:isb_ticks_count="2"
                    app:isb_track_background_color="@color/colorPrimary"
                    app:isb_track_background_size="2dp"
                    app:isb_track_progress_color="@color/colorPrimary"
                    app:isb_track_progress_size="4dp" />
            </com.warkiz.widget.IndicatorStayLayout>

            <TextView
                android:id="@+id/Synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synopsis"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/synopsisContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synopsisContent" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>